sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:3: error: not found: value getNombreValeur
  for(j<-0 to getNombreValeur()-1 by -1) {
              ^AlgBubbleSort2:4: error: not found: value tri
    tri=true
    ^