sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  for(j<-0 to getNombreValeur()-1 by -1) {
    tri=true
  for(i<-1 to getNombreValeurs()-j-1) {
      if(getValeur(i)<getValeur(i-1)) {
        echange(i,i-1)
      }
    }
  }
}